# pollux

./: .gitignore  CLAUDE.md  Encode.fst  Everint.fst  LICENSE  Part1.Polymorphism.fst  Part1.Proposition.fst  Pollux.Proto.Descriptors.fst  Pollux.Proto.Parse.fst  Pollux.Proto.Prelude.fst  Pollux.Proto.Varint.fst  Proof.fst  Proto.fst  Proto2.fst  Proto3.fst  README.org  Varint.fst  Varint.go  Vec.fst  _RocqProject  buf.yaml  flake.nix  justfile  makefile  rocq-to-lean-guide.org
equations-tutorial/: tutorial_basics.v  tutorial_indexed.v  tutorial_obligations.v  tutorial_wf_recursion.v
eval/: README.org  __init__.py  all-repos-summary.txt  asynkron-protoactor-go.json  bufbuild-buf.json  capture.txt  cloudwego-kitex.json  cloudwego-kitex.parquet  colinmarc-hdfs.json  colinmarc-hdfs.parquet  combined_test_histogram.html  etcd-io-etcd.json  etcd-io-etcd.parquet  eval.org  eval.py  eval_compare.py  eval_fetch.py  eval_utils.py  eval_visualize.py  get_proto_history.fish  get_proto_history_json.fish  go-kratos-kratos.json  google-protobuf.dart.json  google-protobuf.dart.parquet  google-rejoiner.parquet  googleapis-google-cloud-go.json  googleapis-google-cloud-go.parquet  googleapis-googleapis.json  googleapis-max-message-per-file.txt  googleapis-max-stats.txt  googleapis-summary.txt  json-repo-count.txt  mjschwenne-grackle.json  pollux.nu  protocolbuffers-protobuf-go.json  protocolbuffers-protobuf.json  protocolbuffers-protobuf.parquet  samchon-typia.json  samchon-typia.parquet  streamdal-plumber.json  (+4 more)
lean/: Pollux.lean  (+4 more)
ocaml/lib/proto/: dune  everything.proto  varint.proto
(+912 files in other folders)
